# logger

./: .gitignore  CMakeLists.txt  logger.cpp  logger.hpp
src/: logger.hpp  main.cpp
